# Open-Code

./: .gitignore  LICENSE  README.md  main.py  output.txt  pyproject.toml
.github/workflows/: test.yml
config/: config.yaml
data/chroma_db/: chroma.sqlite3
docs/: mlops_integration.md
logs/: app.json
src/: cli.py  config.yaml
src/generation/: answerer.py  complete_rag_fixed.ipynb  generator.py  pipeline.py  query_constructor.py  test(2).ipynb  test.ipynb  test_before.ipynb  test_opik.ipynb  test_with_opik.ipynb  working_rag_simple.ipynb
src/ingestion/: test.ipynb
src/ingestion/chunking/: base_chunker.py  chunker.py  get_chunker.py
src/ingestion/embedding/: base_embed.py  embedder.py  get_embbedder.py
src/ingestion/indexer/: manager.py  test.ipynb  test_library_manager.ipynb
src/ingestion/parsers/: base.py  get_parser.py  parsers.py  test.py  test_docling.py  test_marker.py  test_parser.py  test_pymupdf.py
src/ingestion/parsers/testing/: Docling_structure.json  headings.md  paragraphs.md  test_docling.py  test_docling.txt  test_docling_pagemap.txt  test_marker.py  (+3 more)
src/ingestion/vector_store/: stores.py  stores_backup.py  stores_fixed.py
src/shared/: models.py
src/ui/: app.py  widgets.py
src/utils/: config.py  logger.py
test_output/: chapter_1.md
tests/ingestion/: conftest.py  test_docling_parser_integration.py  test_docling_parser_unit.py
tests/ingestion/chunking/: conftest.py  test_markdown_chunker_integration.py  test_markdown_chunker_unit.py
tests/ingestion/embedding/: conftest.py  test_embedder_integration.py  test_embedder_unit.py
