[project]
name = "open-books"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "docling>=2.68.0",
  "fastapi[all]>=0.128.0",
  "loguru>=0.7.3",
  "marker-pdf>=1.10.1",
  "pydantic-settings>=2.12.0",
  "pymupdf>=1.26.7",
  "pyyaml>=6.0.3",
]
