[project]
name = "open-books"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "chromadb>=1.4.1",
  "docling>=2.68.0",
  "fastapi[all]>=0.128.0",
  "iprogress>=0.4",
  "ipykernel>=7.1.0",
  "loguru>=0.7.3",
  "marker-pdf>=1.10.1",
  "ollama>=0.6.1",
  "openai>=1.109.1",
  "opik>=1.9.103",
  "pydantic-settings>=2.12.0",
  "pymupdf>=1.26.7",
  "pytest>=9.0.2",
  "pyyaml>=6.0.3",
  "redis>=7.1.0",
  "redisvl>=0.13.2",
  "sentence-transformers>=5.2.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[dependency-groups]
dev = ["pytest-mock>=3.15.1"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
